Refactor code structure for improved readability and maintainability

--- a/fasilitas.html
+++ b/fasilitas.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fasilitas - Tefa Feedlot dan Sapi Perah Polije</title>
-    <meta name="description"
-        content="Fasilitas TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Didukung oleh infrastruktur modern untuk menjamin kualitas dan efisiensi.">
+    <meta name="description" content="Fasilitas TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Didukung oleh infrastruktur modern untuk menjamin kualitas dan efisiensi.">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,11 +13,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="components/favicon.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="font-['Poppins'] bg-white text-gray-800">
@@ -39,8 +40,7 @@
                     Fasilitas Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                   Infrastruktur modern dan menjamin kualitas<br class="hidden sm:block">
-                    efisiensi produksi dan praktik edukasi terbaik.
+                    Infrastruktur modern dan menjamin kualitas<br class="hidden sm:block"> efisiensi produksi dan praktik edukasi terbaik.
                 </p>
             </div>
         </div>
@@ -51,21 +51,18 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Facility 1: Kandang Sapi -->
-                <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
+                <div class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
                     <div class="-mx-8 -mt-8 mb-6">
                         <img src="assets/images/upload-wa/kandang.jpg" alt="Kandang Sapi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Kandang Sapi</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
-                        Kandang yang memadai dengan kapasitas 30-40 ekor sapi per siklus, mendukung operasional bisnis
-                        dan pendidikan.
+                        Kandang yang memadai dengan kapasitas 30-40 ekor sapi per siklus, mendukung operasional bisnis dan pendidikan.
                     </p>
                 </div>
 
                 <!-- Facility 2: Mesin Perah -->
-                <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
+                <div class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="-mx-8 -mt-8 mb-6">
                         <img src="assets/images/upload-wa/perah.jpg" alt="Mesin Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -76,8 +73,7 @@
                 </div>
 
                 <!-- Facility 3: Chopper Gabah -->
-                <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
+                <div class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="-mx-8 -mt-8 mb-6">
                         <img src="assets/images/upload-wa/chopper.jpg" alt="Chopper Gabah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -88,21 +84,18 @@
                 </div>
 
                 <!-- Facility 4: Traktor -->
-                <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
+                <div class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
                     <div class="-mx-8 -mt-8 mb-6">
                         <img src="assets/images/upload-wa/traktor.jpg" alt="Traktor" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Traktor</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
-                        Digunakan untuk membantu pekerjaan berat seperti mengangkut pakan atau membersihkan area
-                        peternakan.
+                        Digunakan untuk membantu pekerjaan berat seperti mengangkut pakan atau membersihkan area peternakan.
                     </p>
                 </div>
 
                 <!-- Facility 5: Peralatan Pemotongan Sapi -->
-                <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
+                <div class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="-mx-8 -mt-8 mb-6">
                         <img src="assets/images/upload-wa/rumput.jpg" alt="Ladang Rumput Pakan" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -113,15 +106,13 @@
                 </div>
 
                 <!-- Facility 6: Fasilitas Pembelajaran -->
-                <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
+                <div class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="-mx-8 -mt-8 mb-6">
                         <img src="assets/images/upload-wa/kelas.jpg" alt="Fasilitas Pembelajaran" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Fasilitas Pembelajaran</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
-                        Mencakup ruang praktik, laboratorium, meja, dan kursi mahasiswa yang mendukung kegiatan teori
-                        dan praktik mahasiswa.
+                        Mencakup ruang praktik, laboratorium, meja, dan kursi mahasiswa yang mendukung kegiatan teori dan praktik mahasiswa.
                     </p>
                 </div>
             </div>
