--- a/galeri.html
+++ b/galeri.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeri - Tefa Feedlot dan Sapi Perah Polije</title>
-    <meta name="description"
-        content="Galeri foto TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Lihat lebih dekat fasilitas, ternak, dan kegiatan di Peternakan ini Polije.">
+    <meta name="description" content="Galeri foto TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Lihat lebih dekat fasilitas, ternak, dan kegiatan di Peternakan ini Polije.">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,11 +13,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="components/favicon.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="font-['Poppins'] bg-white text-gray-800">
@@ -39,8 +40,7 @@
                     Galeri Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                    Lihat lebih dekat fasilitas, ternak, dan seluruh dokumentasi<br class="hidden sm:block">
-                    kegiatan harian di TEFA Feedlot & Sapi Perah Polije  
+                    Lihat lebih dekat fasilitas, ternak, dan seluruh dokumentasi<br class="hidden sm:block"> kegiatan harian di TEFA Feedlot & Sapi Perah Polije
                 </p>
             </div>
         </div>
@@ -51,44 +51,33 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6">
                 <!-- Gallery Item 1 -->
-                <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in">
-                    <img src="assets/images/upload-wa/galeri-1.jpg" alt="Peralatan Peternakan"
-                        class="w-full h-64 sm:h-80 object-cover">
+                <div class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in">
+                    <img src="assets/images/upload-wa/galeri-1.jpg" alt="Peralatan Peternakan" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 2 -->
-                <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.1s;">
+                <div class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.1s;">
                     <img src="assets/images/upload-wa/galeri-2.jpg" alt="Sapi Perah" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 3 -->
-                <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.2s;">
-                    <img src="assets/images/upload-wa/galeri-3.jpg" alt="Proses Pemerahan"
-                        class="w-full h-64 sm:h-80 object-cover">
+                <div class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.2s;">
+                    <img src="assets/images/upload-wa/galeri-3.jpg" alt="Proses Pemerahan" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 4 -->
-                <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.3s;">
-                    <img src="assets/images/upload-wa/galeri-4.jpg" alt="Pemberian Pakan"
-                        class="w-full h-64 sm:h-80 object-cover">
+                <div class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.3s;">
+                    <img src="assets/images/upload-wa/galeri-4.jpg" alt="Pemberian Pakan" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 5 -->
-                <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.4s;">
-                    <img src="assets/images/upload-wa/galeri-5.jpg" alt="Fasilitas Kandang"
-                        class="w-full h-64 sm:h-80 object-cover">
+                <div class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.4s;">
+                    <img src="assets/images/upload-wa/galeri-5.jpg" alt="Fasilitas Kandang" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 6 -->
-                <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.5s;">
-                    <img src="assets/images/upload-wa/galeri-6.jpg" alt="Perawatan Sapi"
-                        class="w-full h-64 sm:h-80 object-cover">
+                <div class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.5s;">
+                    <img src="assets/images/upload-wa/galeri-6.jpg" alt="Perawatan Sapi" class="w-full h-64 sm:h-80 object-cover">
                 </div>
             </div>
         </div>
