--- a/kontak.html
+++ b/kontak.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontak - Tefa Feedlot dan Sapi Perah Polije</title>
-    <meta name="description"
-        content="Hubungi TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Kami siap mendengar dari Anda. Jangan ragu untuk menghubungi kami.">
+    <meta name="description" content="Hubungi TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Kami siap mendengar dari Anda. Jangan ragu untuk menghubungi kami.">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,11 +13,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="components/favicon.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="font-['Poppins'] bg-white text-gray-800">
@@ -39,8 +40,7 @@
                     Hubungi Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                    Kami siap mendengar dari Anda. Jangan ragu untuk<br class="hidden sm:block">
-                    menghubungi kami.
+                    Kami siap mendengar dari Anda. Jangan ragu untuk<br class="hidden sm:block"> menghubungi kami.
                 </p>
             </div>
         </div>
@@ -57,9 +57,7 @@
                         <h3 class="text-2xl font-bold text-gray-800 mb-6">Alamat</h3>
                         <div class="space-y-4 text-gray-600">
                             <p class="leading-relaxed">
-                                Unit Penggemukan Sapi<br>
-                                Politeknik Negeri Jember,<br>
-                                Jl. Mastrip No. 59, Jember, Jawa Timur
+                                Unit Penggemukan Sapi<br> Politeknik Negeri Jember,<br> Jl. Mastrip No. 59, Jember, Jawa Timur
                             </p>
                         </div>
                     </div>
@@ -80,24 +78,20 @@
                             <div>
                                 <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">Nama
                                     lengkap</label>
-                                <input type="text" id="nama" name="nama" required placeholder="Nama lengkap"
-                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-700 focus:border-transparent transition-all">
+                                <input type="text" id="nama" name="nama" required placeholder="Nama lengkap" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-700 focus:border-transparent transition-all">
                             </div>
 
                             <div>
                                 <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">Email</label>
-                                <input type="email" id="email" name="email" required placeholder="Email"
-                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-700 focus:border-transparent transition-all">
+                                <input type="email" id="email" name="email" required placeholder="Email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-700 focus:border-transparent transition-all">
                             </div>
 
                             <div>
                                 <label for="pesan" class="block text-sm font-semibold text-gray-700 mb-2">Pesan</label>
-                                <textarea id="pesan" name="pesan" rows="5" required placeholder="Pesan"
-                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-700 focus:border-transparent transition-all"></textarea>
+                                <textarea id="pesan" name="pesan" rows="5" required placeholder="Pesan" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-700 focus:border-transparent transition-all"></textarea>
                             </div>
 
-                            <button type="submit"
-                                class="w-full bg-green-700 hover:bg-green-800 text-white font-semibold px-6 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-lg">
+                            <button type="submit" class="w-full bg-green-700 hover:bg-green-800 text-white font-semibold px-6 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-lg">
                                 Kirim Pesan
                             </button>
                         </form>
@@ -113,13 +107,12 @@
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe> -->
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d806.2355241744458!2d113.72454894980955!3d-8.156215578086801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd695a4e623a67b%3A0x776a7173741f28e0!2sUnit%20Penggemukan%20Sapi%20Politeknik%20Negeri%20Jember!5e0!3m2!1sid!2sid!4v1764419276510!5m2!1sid!2sid"
-                        width="100%" height="600" style="border:0; border-radius: 0.5rem;" allowfullscreen=""
-                        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>  
-                        
+                            width="100%" height="600" style="border:0; border-radius: 0.5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- Footer -->
