--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produk & Layanan - Tefa Feedlot dan Sapi Perah Polije</title>
-    <meta name="description"
-        content="Produk & Layanan TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Kualitas terbaik dari peternakan modern yang mengintegrasikan pendidikan dan teknologi.">
+    <meta name="description" content="Produk & Layanan TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Kualitas terbaik dari peternakan modern yang mengintegrasikan pendidikan dan teknologi.">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,11 +13,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="components/favicon.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="font-['Poppins'] bg-white text-gray-800">
@@ -39,8 +40,7 @@
                     Produk Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                    Kualitas terbaik dari peternakan modern yang mengintegrasikan<br class="hidden sm:block">
-                    pendidikan, riset dan teknologi.
+                    Kualitas terbaik dari peternakan modern yang mengintegrasikan<br class="hidden sm:block"> pendidikan, riset dan teknologi.
                 </p>
             </div>
         </div>
@@ -50,23 +50,20 @@
     <section class="py-16 sm:py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                
+
                 <!-- Product 1: Sapi Perah -->
-                <div
-                    class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
+                <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/upload-wa/sapi-perah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
-                        Kami menawarkan sapi perah berkualitas tinggi, termasuk sapi PO (Peranakan Ongole) yang menjadi
-                        keunggulan produk kami.
+                        Kami menawarkan sapi perah berkualitas tinggi, termasuk sapi PO (Peranakan Ongole) yang menjadi keunggulan produk kami.
                     </p>
                 </div>
 
                 <!-- Product 2: Susu Segar -->
-                <div
-                    class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.1s;">
+                <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.1s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/upload-wa/susu.png" alt="Susu Segar" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -77,8 +74,7 @@
                 </div>
 
                 <!-- Product 3: Pupuk Organik -->
-                <div
-                    class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.2s;">
+                <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.2s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/upload-wa/pupuk.jpg" alt="Pupuk Organik" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -89,8 +85,7 @@
                 </div>
 
                 <!-- Product 4: Rempah Pakan -->
-                <div
-                    class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.3s;">
+                <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.3s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/upload-wa/chopper.jpg" alt="Rempah Pakan" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -117,8 +112,7 @@
 
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Service 1: Praktik Mahasiswa -->
-                <div
-                    class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up">
+                <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/upload-wa/praktik.jpg" alt="Praktik Mahasiswa" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -129,8 +123,7 @@
                 </div>
 
                 <!-- Service 2: Riset & Inovasi -->
-                <div
-                    class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.1s;">
+                <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/upload-wa/riset.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -141,8 +134,7 @@
                 </div>
 
                 <!-- Service 3: Kemitraan Industri -->
-                <div
-                    class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.2s;">
+                <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/produk-layanan/kemitraan-industri.png" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -153,8 +145,7 @@
                 </div>
 
                 <!-- Service 4: Layanan Edukasi -->
-                <div
-                    class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.3s;">
+                <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.3s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/produk-layanan/layanan-edukasi.jpg" alt="Layanan Edukasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -165,8 +156,7 @@
                 </div>
 
                 <!-- Service 5: Layanan Konsumen -->
-                <div
-                    class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.4s;">
+                <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.4s;">
                     <div class="-mx-6 -mt-6 mb-6">
                         <img src="assets/images/produk-layanan/layanan-konsumen.jpg" alt="Layanan Konsumen" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
@@ -185,8 +175,7 @@
             <h2 class="text-2xl sm:text-3xl font-bold text-gray-800 mb-6">
                 Tertarik Dengan Layanan Kami?
             </h2>
-            <a href="kontak.html"
-                class="inline-block bg-green-700 hover:bg-green-800 text-white font-semibold px-8 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-lg">
+            <a href="kontak.html" class="inline-block bg-green-700 hover:bg-green-800 text-white font-semibold px-8 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-lg">
                 Hubungi Kami
             </a>
         </div>
