--- a/tentang.html
+++ b/tentang.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - TEFA FeedLot & Sapi Perah Polije</title>
-    <meta name="description"
-        content="Tentang TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Mengintegrasikan pendidikan, penelitian, dan produksi peternakan modern.">
+    <meta name="description" content="Tentang TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Mengintegrasikan pendidikan, penelitian, dan produksi peternakan modern.">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,11 +13,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="components/favicon.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="font-['Poppins'] bg-white text-gray-800">
@@ -39,8 +40,7 @@
                     Tentang Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                    Mengintegrasikan pendidikan, penelitian, dan produksi<br class="hidden sm:block">
-                    peternakan modern.
+                    Mengintegrasikan pendidikan, penelitian, dan produksi<br class="hidden sm:block"> peternakan modern.
                 </p>
             </div>
         </div>
@@ -61,12 +61,8 @@
                         <div class="mb-6">
                             <h4 class="text-lg font-bold text-gray-800 mb-3">Sejarah & Tujuan Awal:</h4>
                             <p class="text-gray-600 leading-relaxed">
-                                TEFA Feedlot dan Sapi Perah ini dibangun atas inisiatif Unit Pengelolaan Peternakan
-                                Politeknik Negeri Jember. Awalnya hanya ditujukan untuk mendukung kegiatan akademis
-                                mahasiswa, yaitu laboratorium hidup bagi mahasiswa untuk belajar dan mengasah
-                                keterampilan mereka dalam pengelolaan peternakan serta pemahaman perawatan sapi secara
-                                langsung mengintegrasikan konsep Teaching Factory (TEFA) yang menggabungkan fungsi
-                                pendidikan dan unit bisnis.
+                                TEFA Feedlot dan Sapi Perah ini dibangun atas inisiatif Unit Pengelolaan Peternakan Politeknik Negeri Jember. Awalnya hanya ditujukan untuk mendukung kegiatan akademis mahasiswa, yaitu laboratorium hidup bagi mahasiswa untuk belajar dan mengasah keterampilan
+                                mereka dalam pengelolaan peternakan serta pemahaman perawatan sapi secara langsung mengintegrasikan konsep Teaching Factory (TEFA) yang menggabungkan fungsi pendidikan dan unit bisnis.
                             </p>
                         </div>
 
@@ -74,10 +70,8 @@
                         <div class="mb-6">
                             <h4 class="text-lg font-bold text-gray-800 mb-3">Visi & Misi:</h4>
                             <p class="text-gray-600 leading-relaxed">
-                                Selain fokus pada produksi dan bisnis, peternakan berpedoman pada sebagai sarana
-                                pembelajaran, pemberdayaan pemulihan, dan pengelolaan sumber daya lokal. Hanya
-                                mengutamakan keuntungan, tetapi juga menyerta kualitas dan kepedulian terhadap
-                                lingkungan melalui budaya pengembangan berkelanjutan.
+                                Selain fokus pada produksi dan bisnis, peternakan berpedoman pada sebagai sarana pembelajaran, pemberdayaan pemulihan, dan pengelolaan sumber daya lokal. Hanya mengutamakan keuntungan, tetapi juga menyerta kualitas dan kepedulian terhadap lingkungan melalui
+                                budaya pengembangan berkelanjutan.
                             </p>
                         </div>
 
@@ -85,9 +79,7 @@
                         <div>
                             <h4 class="text-lg font-bold text-gray-800 mb-3">Teaching Factory (TEFA):</h4>
                             <p class="text-gray-600 leading-relaxed">
-                                Sebagai TEFA, kami tidak hanya berfungsi untuk unit bisnis, tetapi juga menjadi tempat
-                                pembelajaran, penelitian, dan pengembangan masyarakat. Dengan kapasitas kandang 90-40
-                                ekor sapi, kami mengelola laboratorium hidup bagi mahasiswa untuk belajar dan
+                                Sebagai TEFA, kami tidak hanya berfungsi untuk unit bisnis, tetapi juga menjadi tempat pembelajaran, penelitian, dan pengembangan masyarakat. Dengan kapasitas kandang 90-40 ekor sapi, kami mengelola laboratorium hidup bagi mahasiswa untuk belajar dan
                                 berprestasi langsung di lapangan.
                             </p>
                         </div>
@@ -96,8 +88,7 @@
 
                 <!-- Right Column - Image -->
                 <div class="order-first lg:order-last scroll-animate fade-left">
-                    <img src="assets/images/upload-wa/beranda-1.jpg" alt="Sapi Perah Berkualitas"
-                        class="rounded-lg shadow-xl w-full h-auto hover:scale-105 transition-transform duration-500">
+                    <img src="assets/images/upload-wa/beranda-1.jpg" alt="Sapi Perah Berkualitas" class="rounded-lg shadow-xl w-full h-auto hover:scale-105 transition-transform duration-500">
                 </div>
             </div>
         </div>
