fix: Correct typo in testimonial and clarify product description for organic fertilizer.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         </svg>
                     </div>
                     <p class="text-gray-600 mb-4 italic">
-                        "Kerja sama dengan peternakan Polije sangat mengembangkan bisnis kami. yang lebih baik dalam rangkaian produk temak."
+                        "Kerja sama dengan peternakan Polije sangat mengembangkan bisnis kami. yang lebih baik dalam rangkaian produk ternak."
                     </p>
                     <div class="pt-4 border-t border-gray-200">
                         <p class="font-bold text-gray-800">- Dr. Santoso, Mitra Industri</p>
