--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -80,7 +80,7 @@
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Pupuk Organik</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
-                        Produk turunyaberupa bentuk dari sistem pertanian period di sektor kampus.
+                        Pupuk organik yang dihasilkan dari sisa-sisa tanaman yang diolah menjadi pupuk organik.
                     </p>
                 </div>
 
